Header con estilos mobile terminado

--- a/html/index.html
+++ b/html/index.html
@@ -2,8 +2,23 @@
 <html lang="en">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=EB+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>SteamBurger</title>
   <body>
+    <header class="header">
+      <div class="header__logo-btn">
+        <div class="header__logo"> </div><a class="header__btn" href="#"> <span class="header__btn-text">Entrar </span><span class="header__btn-icon"></span></a>
+      </div>
+      <nav class="header__nav"> 
+        <ul class="header__nav-container">
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Home</a></li>
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Ordenar</a></li>
+          <li class="header__nav-item"><a class="header__nav-link" href="#">Cobertura</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
