Footer con estilos mobile terminado

--- a/html/index.html
+++ b/html/index.html
@@ -20,5 +20,35 @@
         </ul>
       </nav>
     </header>
+    <footer class="footer">
+      <div class="footer__logo"></div>
+      <div class="footer__info-container">
+        <div class="box">
+          <h2 class="box__title">Conocénos</h2>
+          <ul class="box__links-container"> 
+            <li class="box__links-item"><a class="box__links-link">Sucursales</a></li>
+            <li class="box__links-item"><a class="box__links-link">Contáctanos</a></li>
+            <li class="box__links-item"><a class="box__links-link">Términos y condiciones de uso</a></li>
+            <li class="box__links-item"><a class="box__links-link">Política de privacidad</a></li>
+          </ul>
+        </div>
+        <div class="box">
+          <h2 class="box__title">Redes sociales</h2>
+          <ul class="box__links-container"> 
+            <li class="box__links-item"><a class="box__links-link">Instagram</a></li>
+            <li class="box__links-item"><a class="box__links-link">Facebook</a></li>
+          </ul>
+        </div>
+        <div class="box">
+          <h2 class="box__title">Mi cuenta</h2>
+          <ul class="box__links-container"> 
+            <li class="box__links-item"><a class="box__links-link">Pedir</a></li>
+            <li class="box__links-item"><a class="box__links-link">Mis pedidos</a></li>
+            <li class="box__links-item"><a class="box__links-link">Mis direcciones</a></li>
+            <li class="box__links-item"><a class="box__links-link">Cambiar contraseña</a></li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
