Section menu de la pagina Home terminada

--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,15 @@
         </ul>
       </nav>
     </header>
+    <main class="main"> 
+      <section class="slider"> 
+        <div class="slider__img-container"><img class="slider__img" src="" alt=""></div>
+        <div class="slider__img-container"><img class="slider__img" src="" alt=""></div>
+        <div class="slider__img-container"><img class="slider__img" src="" alt=""></div>
+      </section>
+      <section class="menu"><a class="menu-box" href="#"><img class="menu-box__img" src="/img/la_de_siempre.png" alt=""/><span class="menu-box__title">Las de siempre</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/antojos.png" alt=""/><span class="menu-box__title">Pequeños antojos</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/infantiles.png" alt=""/><span class="menu-box__title">Combos infantiles</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/bebidas.png" alt=""/><span class="menu-box__title">Bebidas y malteadas</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/acompañamientos.png" alt=""/><span class="menu-box__title">Acompañamientos</span></a>
+      </section>
+    </main>
     <footer class="footer">
       <div class="footer__logo"></div>
       <div class="footer__info-container">
