Section address de la pagina Home terminada

--- a/html/index.html
+++ b/html/index.html
@@ -28,6 +28,26 @@
       </section>
       <section class="menu"><a class="menu-box" href="#"><img class="menu-box__img" src="/img/la_de_siempre.png" alt=""/><span class="menu-box__title">Las de siempre</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/antojos.png" alt=""/><span class="menu-box__title">Pequeños antojos</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/infantiles.png" alt=""/><span class="menu-box__title">Combos infantiles</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/bebidas.png" alt=""/><span class="menu-box__title">Bebidas y malteadas</span></a><a class="menu-box" href="#"><img class="menu-box__img" src="/img/acompañamientos.png" alt=""/><span class="menu-box__title">Acompañamientos</span></a>
       </section>
+      <section class="address"> 
+        <h2 class="address__title">Encuéntranos en</h2>
+        <div class="address__container"> 
+          <div class="addressBox"> 
+            <h2 class="addressBox__position">Calle 15 de septiembre</h2>
+            <p class="addressBox__horario">Calle 15 L15A-84</p>
+            <p class="addressBox__horario2">Lunes a jueves y domingo de 12:00 a 21:00 Viernes y sábado de 12:00 a 22:00</p>
+          </div>
+          <div class="addressBox"> 
+            <h2 class="addressBox__position">Calle 6</h2>
+            <p class="addressBox__horario">Calle 6 L15A-84</p>
+            <p class="addressBox__horario2">Lunes a jueves y domingo de 12:00 a 21:00 Viernes y sábado de 12:00 a 22:00</p>
+          </div>
+          <div class="addressBox"> 
+            <h2 class="addressBox__position">Parque Central</h2>
+            <p class="addressBox__horario">Calle 6 L15A-84</p>
+            <p class="addressBox__horario2">Lunes a jueves y domingo de 12:00 a 21:00 Viernes y sábado de 12:00 a 22:00</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__logo"></div>
